--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=DESKTOP-TN8L4PG\\SQLEXPRESS;Database=Villa;Trusted_Connection=true;TrustServerCertificate=true"
+  }
+
 }
